--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "types": "./index.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Stuk/jszip.git"
+    "url": "https://github.com/beyowi/jszip.git"
   },
   "keywords": [
     "zip",
